app/assets/stylesheets/bootstrap-custom.css.scss
/* ... */
input[type="checkbox"] {
    font-size: 150%;
    margin-right: 4px;
}
.tracking-row {
  margin: 5px 0;
}
.tracking-option {
  margin: 3px 0;
  padding-top: 2px;
  padding-bottom: 2px;
}
#all-city {
   color: $normal-text;
   font-weight: 400;
   font-size: 15px;
   margin-left: 2.5px;
}
.or-text {
  color: $less-emphasized-text;
  font-weight: 400;
}
.formButton {
  width: 100%;
  margin-top: 15px;
  background: $step-background;
}
::-webkit-input-placeholder, :-moz-placeholder, ::-moz-placeholder, :-ms-input-placeholder {
  color: $gray-body-background;
  font-size: 11px;
  position: relative;
  z-index: 1000;
  font-family: inherit !important;
}

//Change font size when screen size changes
/* Extra small devices (phones, less than 768px) */
@media(max-width:767px) {
  body {
    padding-top: 50px;
    margin-bottom: 40px;
    overflow-x: hidden;
  }
  // navbar header
  .navbar-form {
    width: 220px;
    border: none !important;
    box-shadow: none !important;
    -webkit-box-shadow: none !important;
    padding-top: 0;
    padding-bottom: 0;
  }
  .dropdown-menu {
    li {
      a {
        color: $mobile-navbar-text !important;
      }
    }
  }
  // Index page
.banner-xs {
    background: url("https://s3-us-west-2.amazonaws.com/knird/index/home3_adj_xs.jpg") no-repeat fixed center center / cover transparent;
    background-clip: border-box;
    background-origin: padding-box;
    -webkit-background-size: auto 100%;
    -moz-background-size: auto 100%;
    -o-background-size: auto 100%;
    background-size: auto 100%;
    height: 110vh;
}
.valueStatement {
  padding-top: 13%;
  height:100vh;
  width: 100%;
  position: fixed;
  color: #fff;
  text-shadow: 1px 1px 15px rgba(0, 0, 0, 0.6);
  text-align: left;
  div {
    h1.brand-font {
      font-size: 350% !important;
    }
    h3.brand-subfont {
      margin-top: 0;
      font-size: 125%;
    }
  }
}
.formButton-index-Banner {
  width: 100%;
  font-size: 14px;
  margin-top: 150%;
}
.formButton-index-Banner2 {
  font-size: 14px;
  width: 100%;
}
.index-section-header {
  font-size: 20px;
  margin: 25px 0;
}
.value-prop-section {
  padding-bottom: 0 !important;
}
.valueDesc {
  width: 100%;
  margin: 0 auto 25px auto;
  text-align: center;
}
.request-invitation-section {
  padding-bottom: 20px;
}
.request-invitation-row {
  margin: 0 0 10px 0;
}
.new_invitation_request {
  label {
    font-size: 10px;
    text-align: left;
  }
}
.formButton-invitation-request {
  width: 100%;
  background: $step-background;
  margin-top: 10px;
}

  // locations index page
  .overview-tile {
    margin-bottom: 10px;
  }
  .overview-tile-2 {
    margin-bottom: 10px;
    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
    -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
    border-radius: 6px;
    overflow: hidden;
    background: #fff;
    width: 99%;
    height: 395px;
    position: relative;
  }
  .cloud-holder {
    height: 90px;
  }
  .overview-tile-footer {
    padding-top: 30px;
  }
  .beer-name, .beer-rating {
    font-size: 15px;
  }
  .page-title {
    font-size: 16px;
    padding: 10px 0 5px 0;
  }
  .page-header {
    margin-top: 10px;
  }
  .dark-gray-text {
    margin-top: 0;
  }
  .xs-image-holder {
    float: right;
    margin-top: 35px;
    width: 100px;
  }
  .image-holder {
    float: right;
    width: 100px;
  }
  // Rating page
  .rating-tile {
    margin: 7.5px 0 0 2.5px;
    box-shadow: none !important;
    -webkit-box-shadow: none !important;
    border-radius: 0;
    overflow: hidden;
    background: #fff;
    position: relative;
    padding-bottom: 20px;
  }

  .rating-direction {
    p {
      width: 90%;
      font-size: 11px;
    }
  }
  #visible-rating {
    h1 {
      font-size: 72px;
      font-weight: 500;
      color: $user-rating-text;
      margin: 0;
    }  
  }
  // Retailer page
  .retailer-page-title-mobile {
    padding: 7.5px 0 0 45px;
    margin: 0;
    font-size: 16px;
  }
  .retailer-logo-image-small {
      background-repeat: no-repeat;
      height: 40px;
      margin: 10px 0 5px 0;
      padding: 5px; 
  }
// Beer info page
//  .beer-info-tile {
//    box-shadow: 0 1px 2px 0 rgba(255, 255, 255, 0) !important;
//    -webkit-box-shadow: 0 1px 2px 0 rgba(255, 255, 255, 0) !important;
//    border-radius: 6px;
//  }
  .brewery-image-holder-full-page {
    padding-top: 10px;
    display: inline;
  }
  .brewery-image-holder-empty-full-page {
    margin: 10px 0 0 10px;
    padding: 0;
    height: 75px;
    border: 1px solid $gray-body-background;
    color: $normal-text;
    h1 {
      font-size: 32px;
    }
  }
  .cloud-holder-full-page {
    height: 75px;
  }
  // User account page
  .user-account-header {
    font-size: 28px;
  }
  
// Footer css
  .footer {
    background: $dark-gray !important;
    bottom: 0;
    position: absolute;
    height: 40px;
    width: 100%;
    padding-top: 5px;
    padding-bottom: 5px;
    .container {
      padding: 0;
      text-align: center;
      .list-inline {
        padding: 0 !important;
        width: 100%;
      }
      .copyright {
        margin-bottom: 5px;
      }
    }
    a, .footer-menu-divider, p {
      font-size: 9px;
      font-weight: 300;
      color: $white;
      letter-spacing: 2px;
      text-transform: uppercase;
    }
    p {
      font-size: 8px;
      font-weight: 200;
      margin-bottom: 0;
    }
  }

  // Sign-up & log-in pages
  .box {
    margin-top: 24px;
  }
  .formSpace {
    font-size: 24px;
  }
}
@media(min-width: 768px) {
  .image-holder {
    position: fixed;
    top: 120px;
    right: 10px;
    width: 100px;
  }
}
/* Medium devices (desktops, 992px and up) */
@media (max-width: 992px) {

}
@media (min-width: 880px) {
  .image-holder {
    position: fixed;
    top: 120px;
    right: 10px;
    width: 125px;
  }
}
@media (min-width: 1000px) {
  .image-holder {
    position: fixed;
    top: 120px;
    right: 10px;
    width: 115px;
  }
}
/* ... */

